crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__unchecked-stat_C181.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
---
C181 stat argument 'status' is overwritten before being checked in this scope.
  --> ./resources/test/fixtures/correctness/C181.f90:14:20
   |
12 |   ! Set stat, but don't check it until after another allocate.
13 |   ! Should raise an error.
14 |   ALLOCATE (x(10), stat=status)
   |                    ^^^^^^^^^^^
15 |
16 |   ! Set same stat and check it.
17 |   ! This is fine.
18 |   allocate (y(10), stat=Status)
   |                    ----------- Overwritten here
19 |   print *, "Something between allocation and checking"
20 |   if (status /= 0) then
   |

C181 stat argument 'status' is overwritten before being checked in this scope.
  --> ./resources/test/fixtures/correctness/C181.f90:29:20
   |
28 |   ! Repeat, but the second allocate is not a direct sibling
29 |   ALLOCATE (x(10), Stat=status)
   |                    ^^^^^^^^^^^
30 |   if (.true.) then
31 |     ALLOCATE (y(10), STAT=statUs)
   |                      ----------- Overwritten here
32 |     if (status /= 0) then
33 |       print *, "Error allocating y"
   |

C181 stat argument 'STATUS_X' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:59:20
    |
 58 |   ! Repeat, but using a custom error handler
 59 |   allocate (x(10), stat=STATUS_X)
    |                    ^^^^^^^^^^^^^
 60 |   if (.true.) then
 61 |     allocate (y(10), STAT=status_y)
    |
   ::: ./resources/test/fixtures/correctness/C181.f90:103:22
    |
101 |   ! Stat is not checked in any cases. Should raise for all four.
102 |   if(if_option == 1) then
103 |     allocate (x(10), stat=STATUS_X)
    |                      ------------- Overwritten here
104 |   else
105 |     allocate (x(30), stat=status_x)
    |

C181 stat argument 'STATUS_X' is not checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:103:22
    |
101 |   ! Stat is not checked in any cases. Should raise for all four.
102 |   if(if_option == 1) then
103 |     allocate (x(10), stat=STATUS_X)
    |                      ^^^^^^^^^^^^^
104 |   else
105 |     allocate (x(30), stat=status_x)
    |

C181 stat argument 'status_x' is not checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:105:22
    |
103 |     allocate (x(10), stat=STATUS_X)
104 |   else
105 |     allocate (x(30), stat=status_x)
    |                      ^^^^^^^^^^^^^
106 |   end if
107 |   select case (select_option)
    |

C181 stat argument 'Status_y' is not checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:109:22
    |
107 |   select case (select_option)
108 |   case(1)
109 |     allocate (y(10), stat=Status_y)
    |                      ^^^^^^^^^^^^^
110 |   case default
111 |     allocate (y(20), stat=status_y)
    |

C181 stat argument 'status_y' is not checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:111:22
    |
109 |     allocate (y(10), stat=Status_y)
110 |   case default
111 |     allocate (y(20), stat=status_y)
    |                      ^^^^^^^^^^^^^
112 |   end select
    |

C181 stat argument 'status_w' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:116:20
    |
114 |   ! Set stat, but overwrite it before checking it.
115 |   ! Should raise an error.
116 |   allocate (w(10), STAT=status_w)
    |                    ^^^^^^^^^^^^^
117 |   STATUS_W = 0
    |   -------- Overwritten here
118 |   if (Status_w /= 0) then
119 |     print *, "Error allocating w"
    |

C181 stat argument 'status_z' is not checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:126:20
    |
124 |   ! Set stat, but don't check it until the end of the program.
125 |   ! Should raise an error.
126 |   allocate (z(10), stat=status_z)
    |                    ^^^^^^^^^^^^^
127 |
128 |   print *, "Something between allocate and the end of the program"
    |

C181 iostat argument 'status' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:146:22
    |
144 |     real(8), allocatable :: x(:)
145 |     logical :: file_exist
146 |     inquire(unit=10, iostat=status, exist=file_exist)
    |                      ^^^^^^^^^^^^^
147 |     open (file="file.txt", unit=10, IOSTAT=Status, asynchronous="YES")
    |                                     ------------- Overwritten here
148 |     write(10, *, iostat=status) line
149 |     flush(10, iostat=STATUS)
    |

C181 iostat argument 'Status' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:147:37
    |
145 |     logical :: file_exist
146 |     inquire(unit=10, iostat=status, exist=file_exist)
147 |     open (file="file.txt", unit=10, IOSTAT=Status, asynchronous="YES")
    |                                     ^^^^^^^^^^^^^
148 |     write(10, *, iostat=status) line
    |                  ------------- Overwritten here
149 |     flush(10, iostat=STATUS)
150 |     backspace(10, iostat=Status)
    |

C181 iostat argument 'status' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:148:18
    |
146 |     inquire(unit=10, iostat=status, exist=file_exist)
147 |     open (file="file.txt", unit=10, IOSTAT=Status, asynchronous="YES")
148 |     write(10, *, iostat=status) line
    |                  ^^^^^^^^^^^^^
149 |     flush(10, iostat=STATUS)
    |               ------------- Overwritten here
150 |     backspace(10, iostat=Status)
151 |     rewind(10, IOSTAT=status)
    |

C181 iostat argument 'STATUS' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:149:15
    |
147 |     open (file="file.txt", unit=10, IOSTAT=Status, asynchronous="YES")
148 |     write(10, *, iostat=status) line
149 |     flush(10, iostat=STATUS)
    |               ^^^^^^^^^^^^^
150 |     backspace(10, iostat=Status)
    |                   ------------- Overwritten here
151 |     rewind(10, IOSTAT=status)
152 |     read(10, *, iostat=status, asynchronous="YES") line
    |

C181 iostat argument 'Status' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:150:19
    |
148 |     write(10, *, iostat=status) line
149 |     flush(10, iostat=STATUS)
150 |     backspace(10, iostat=Status)
    |                   ^^^^^^^^^^^^^
151 |     rewind(10, IOSTAT=status)
    |                ------------- Overwritten here
152 |     read(10, *, iostat=status, asynchronous="YES") line
153 |     wait(10, Iostat=STATUS)
    |

C181 iostat argument 'status' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:151:16
    |
149 |     flush(10, iostat=STATUS)
150 |     backspace(10, iostat=Status)
151 |     rewind(10, IOSTAT=status)
    |                ^^^^^^^^^^^^^
152 |     read(10, *, iostat=status, asynchronous="YES") line
    |                 ------------- Overwritten here
153 |     wait(10, Iostat=STATUS)
154 |     endfile(10, iostat=status)
    |

C181 iostat argument 'status' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:152:17
    |
150 |     backspace(10, iostat=Status)
151 |     rewind(10, IOSTAT=status)
152 |     read(10, *, iostat=status, asynchronous="YES") line
    |                 ^^^^^^^^^^^^^
153 |     wait(10, Iostat=STATUS)
    |              ------------- Overwritten here
154 |     endfile(10, iostat=status)
155 |     close(10, iostat=STATUS)
    |

C181 iostat argument 'STATUS' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:153:14
    |
151 |     rewind(10, IOSTAT=status)
152 |     read(10, *, iostat=status, asynchronous="YES") line
153 |     wait(10, Iostat=STATUS)
    |              ^^^^^^^^^^^^^
154 |     endfile(10, iostat=status)
    |                 ------------- Overwritten here
155 |     close(10, iostat=STATUS)
156 |     ! Something other than IO statement, reuse status
    |

C181 iostat argument 'status' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:154:17
    |
152 |     read(10, *, iostat=status, asynchronous="YES") line
153 |     wait(10, Iostat=STATUS)
154 |     endfile(10, iostat=status)
    |                 ^^^^^^^^^^^^^
155 |     close(10, iostat=STATUS)
    |               ------------- Overwritten here
156 |     ! Something other than IO statement, reuse status
157 |     allocate(x(10), STAT=Status)
    |

C181 iostat argument 'STATUS' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:155:15
    |
153 |     wait(10, Iostat=STATUS)
154 |     endfile(10, iostat=status)
155 |     close(10, iostat=STATUS)
    |               ^^^^^^^^^^^^^
156 |     ! Something other than IO statement, reuse status
157 |     allocate(x(10), STAT=Status)
    |                     ----------- Overwritten here
158 |     deallocate(x, stat=status)
159 |   end subroutine io
    |

C181 stat argument 'Status' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:157:21
    |
155 |     close(10, iostat=STATUS)
156 |     ! Something other than IO statement, reuse status
157 |     allocate(x(10), STAT=Status)
    |                     ^^^^^^^^^^^
158 |     deallocate(x, stat=status)
    |                   ----------- Overwritten here
159 |   end subroutine io
    |

C181 stat argument 'status' is not checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:158:19
    |
156 |     ! Something other than IO statement, reuse status
157 |     allocate(x(10), STAT=Status)
158 |     deallocate(x, stat=status)
    |                   ^^^^^^^^^^^
159 |   end subroutine io
    |

C181 cmdstat argument 'Status' is overwritten before being checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:162:37
    |
161 |   integer function cmd_line() result(status)
162 |     call execute_command_line("ls", cmdstat=Status)
    |                                     ^^^^^^^^^^^^^^
163 |     call execute_command_line("ls", Cmdstat=status)
    |                                     -------------- Overwritten here
164 |   end function cmd_line
    |

C181 cmdstat argument 'status' is not checked in this scope.
   --> ./resources/test/fixtures/correctness/C181.f90:163:37
    |
161 |   integer function cmd_line() result(status)
162 |     call execute_command_line("ls", cmdstat=Status)
163 |     call execute_command_line("ls", Cmdstat=status)
    |                                     ^^^^^^^^^^^^^^
164 |   end function cmd_line
    |
