crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__unreachable-statement_C191.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C191 code following `return` is unreachable
  --> ./resources/test/fixtures/correctness/C191.f90:13:5
   |
11 |     ! Ignore this comment
12 |
13 |     x = 2
   |     ^^^^^
14 |     do i=1,10
15 |       if (i == 5) then
   |

C191 code following `cycle` is unreachable
  --> ./resources/test/fixtures/correctness/C191.f90:18:9
   |
16 |         cycle  ! Error
17 |         ! Ignore this comment
18 |         call some_routine()
   |         ^^^^^^^^^^^^^^^^^^^
19 |         stop  ! Error
20 |         print *, "hello world"
   |

C191 code following `stop` is unreachable
  --> ./resources/test/fixtures/correctness/C191.f90:20:9
   |
18 |         call some_routine()
19 |         stop  ! Error
20 |         print *, "hello world"
   |         ^^^^^^^^^^^^^^^^^^^^^^
21 |         return  ! Okay
22 |       else if (i == 7) then
   |

C191 code following `error` is unreachable
  --> ./resources/test/fixtures/correctness/C191.f90:24:9
   |
22 |         else if (i == 7) then
23 |           error stop  ! Error
24 | /         if (i == 7) then
25 | |           write (*, *) "foo bar"
26 | |         end if 
   | |______________^
27 |           exit  ! Error
28 |           x = 5
   |

C191 code following `exit` is unreachable
  --> ./resources/test/fixtures/correctness/C191.f90:28:9
   |
26 |         end if 
27 |         exit  ! Error
28 |         x = 5
   |         ^^^^^
29 |         exit  ! Okay
30 |       end if
   |
