crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__use-all_C121.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
---
./resources/test/fixtures/correctness/C121.f90:3:3: C121 'use' statement missing 'only' clause
  |
1 | module my_module
2 |   use, intrinsic :: iso_fortran_env, only: real32
3 |   use, intrinsic :: iso_c_binding
  |   ------------------------------- C121
4 |   use :: my_other_module
5 | end module my_module
  |

./resources/test/fixtures/correctness/C121.f90:4:3: C121 'use' statement missing 'only' clause
  |
2 |   use, intrinsic :: iso_fortran_env, only: real32
3 |   use, intrinsic :: iso_c_binding
4 |   use :: my_other_module
  |   ---------------------- C121
5 | end module my_module
  |
