crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__use-all_C121.f90_allow_bare_use.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C121 'use' statement missing 'only' clause
 --> ./resources/test/fixtures/correctness/C121.f90:4:3
  |
2 |   use, intrinsic :: iso_fortran_env, only: real32
3 |   use, intrinsic :: iso_c_binding
4 |   use :: my_other_module
  |   ^^^^^^^^^^^^^^^^^^^^^^
5 | end module my_module
  |
